tests/js/invalid/if/green-conditional.buri
result = if #green do "hello"